--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 body {
-  background-color: rgb(57, 90, 101);
+  background-color: #395a65;
 }
-.App {
+
+.app {
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -9,35 +10,40 @@ body {
   display: flex;
   height: 100vh;
 }
+
 .counter {
-  font-size: 48px;
+  font-size: 3rem;
   font-weight: bold;
-  margin: 0 20px;
+  margin: 0 1.25rem;
+}
+
+.increaseButton,
+.decreaseButton {
+  width: 5.75rem;
+  height: 5.75rem;
+  border-radius: 50%;
+  font-size: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2),
+    0 0.375rem 1.25rem 0 rgba(0, 0, 0, 0.19);
 }
 
 .increaseButton {
-  color: rgb(139, 189, 199);
-  border-radius: 50%;
-  transition-duration: 0.4s;
-  transform: scale(6);
+  color: #8bbdc7;
 }
+
 .increaseButton:hover {
   background-color: #2d4c67;
   color: white;
 }
-.increaseButton {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+
 .decreaseButton {
-  color: lightcoral;
-  border-radius: 50%;
-  transition-duration: 0.4s;
-  transform: scale(6);
+  color: #f08080;
 }
+
 .decreaseButton:hover {
-  background-color: lightcoral;
-  color: white;
-}
-.decreaseButton {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #f08080;
+  color: #ffffff;
 }
